fix alignment of dropdowns

--- a/main.css
+++ b/main.css
@@ -396,6 +396,7 @@ td {
     width: 50%;
 }
 
-.ion-energy-econfig-static-row {
+.ion-energy-econfig-dyn-row {
+    text-align: center;
 }
 
